app/styles/style.css
[hidden] { display: none !important }

/* Angular tries to inject this, but CSP. */
[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
  display: none;
}

/* Random styling just to position some random box*/
html, body {
  height: 100%;
  padding: 0;
  margin: 0;
}
body {
  padding-left: 10px;
  padding-right: 10px;
  /* asdfsklj margin collapsing */
  padding-top: 1px;
  margin-top: -1px;
  /* always show the scrollbar */
  overflow-y: scroll;
}

.modal {
  /* Okay, what is this double-scrollbar nonsense? */
  overflow-y: auto;
}

/* More compact or something. */
.form-group {
  margin-bottom: 5px;
}

message-view {
  display: block;
  height: 100%;
  max-width: 700px;
  margin: 0 auto 0 auto;
}

.message-placeholder {
  margin: 0;
  padding: 0;
  height: 0;
  width: 0;
}

pre { padding: 0; margin: 0 }

#bottom-alerts {
  position: fixed;
  bottom: 0px;
  width: 100%;
  left: 0px;
  padding: 20px;
}
.alert-link {
  /* Bootstrap sets 500 which doesn't seem to show? */
  font-weight: bold !important;
}

.message {
  background-color: #f5f5f5;
  border-radius: 4px;
  border: 2px solid #ccc;
  margin: 10px 0;
}
.message-selected {
  background-color: #fff;
  border: 2px solid #999;
}

.message-signature {
  background-color: #e8e8e8;
  padding: 3px 5px;
  font-size: 80%;
  color: #555;
  text-align: right;
}
.message-header {
  font-weight: bold;
  background-color: #e2e2e2;
  padding: 3px 5px;
}
.message-header a {
  color: inherit !important;
}

.message-personal {
  background-color: #e2ffd4;
}
.message-personal.message-selected {
  background-color: #f1ffee;
}
.message-personal > .message-header {
  background-color: inherit !important;
  color: inherit !important;
}
.message-personal > .message-signature {
  background-color: #c4f0af;
}

.message-dark {
  border: 2px solid #888;
  background-color: #333;
}
.message-dark.message-selected {
  background-color: #444;
}
.message-dark > .message-header {
  background-color: #555;
  color: #eee;
}
.message-dark > .message-body {
  color: #eee;
}
.message-dark > .message-signature {
  background-color: #666;
  color: #aaa;
}

.message-body {
  display: block;
  padding: 10px 10px 10px 2em;
  /* Undo a lot of bootstrap stuff. */
  border: none;
  border-radius: 0;
  background: none;
}

.msgview-loading-above, .msgview-loading-below {
  text-align: center;
  color: #444;
  height: 100%;
  position: relative;
}
.msgview-loading-above-text {
  width: 100%;
  padding: 5px 0 5px 0;
  position: absolute;
  bottom: 0;
}
.msgview-loading-below-text {
  width: 100%;
  padding: 5px 0 5px 0;
}
.msgview-loading-above-at-end {
  display: none;
}
.msgview-loading-below-at-end {
  visibility: hidden;  /* keep the spacer */
  height: 75%;
}
.msgview-bottom-spacer {
  height: 50%;
}

.dialog-overlay {
  opacity: 0.85;
  background-color: #000;
  position: fixed;
  top: 0; left: 0; bottom: 0; right: 0;
}
.dialog-dummy-parent {
  position: fixed;
  top: 0; left: 0; bottom: 0; right: 0;
  padding: 5px;
}
.dialog {
  border-radius: 5px;
  margin: 20px auto 0 auto;
  max-width: 500px;
  padding: 10px;
  background-color: white;
  color:black;
}

#reset-view {
    position: fixed;
    top: 5px;
    right: 5px;
}

#recent-states {
    position: fixed;
    top: 5px;
    left: 5px;
    width: auto !important;
}

#reply-box {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: #eee;
    border-top: 1px solid black;
}
#reply-box > form {
    display: block;
    margin: 5px auto;
    max-width: 700px;
}
#reply-box textarea {
    font-family: monospace;
}

